--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fooleap/fooleap.github.io.git"
+    "url": "git+https://github.com/znfang/znfang.github.io.git"
   },
-  "author": "fooleap",
+  "author": "znfang",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fooleap/fooleap.github.io/issues"
+    "url": "https://github.com/znfang/znfang.github.io/issues"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
   ],
-  "homepage": "https://github.com/fooleap/fooleap.github.io#readme",
+  "homepage": "https://github.com/znfang/znfang.github.io#readme",
   "description": ""
 }
