--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ encoding: utf-8
 port: 5678
 host: 0.0.0.0
 
-title: znfang's Blog
+title: znan
 keywords: [znfang, 后端, 算法, 杭州]
 description: '到底要做一个什么样的人？'
 
